# dearai-backend

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  documentation.md  pyproject.toml
.github/workflows/: deploy-gateway.yml  deploy-python.yml  deploy.yml
ai-service/: .env.example
ai-service/app/: main.py
ai-service/app/schemas/: __init__.py  graph_schema.py
ai-service/app/services/context/: __init__.py  graphrag.py
ai-service/app/services/graph/: generation.py
ai-service/app/services/guardrails/: regex_guardrail.py
ai-service/app/services/llm/: prompt_manager.py
ai-service/app/services/stt/: __init__.py  stt.py
ai-service/app/services/tts/: __init__.py  tts.py
ai-service/app/utils/: __init__.py  llm_setup.py  setup_client.py
ai_service/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
ai_service/app/: __init__.py  main.py
ai_service/app/auth/: __init__.py  dependencies.py  paseto.py
ai_service/app/chat/: schemas.py  service.py
ai_service/app/schemas/: graph_schema.py
ai_service/app/services/: __init__.py
ai_service/app/services/context/: graphrag.py
ai_service/app/services/graph/: __init__.py  generation.py  retrieval.py
ai_service/app/services/guardrails/: __init__.py  regex_guardrail.py
ai_service/app/services/llm/: __init__.py  generate_output.py
ai_service/app/utils/: llm_setup.py  setup_client.py
app/: main.py
app/api/v1/: auth.py  chat.py  conversations.py  users.py
app/core/: config.py  database.py  dependencies.py  falkordb.py  redis.py
app/migrations/: env.py
app/migrations/versions/: 0001_initial.py
app/models/: __init__.py  auth.py  conversation.py  user.py
app/repositories/: database.py
app/services/auth/: models.py  schemas.py  service.py  utils.py
app/services/cache/: rag_cache.py
app/services/chat/: schemas.py  service.py
app/services/chat/handlers/: text.py  voice.py
app/services/context/: __init__.py  base.py  graph_rag.py  graph_schema.py  summary.py  summary_generator.py
app/services/conversations/: models.py  schemas.py  service.py
app/services/emotion/: __init__.py  hume.py  schemas.py
app/services/guardrails/: __init__.py  input.py  output.py
app/services/llm/: __init__.py  base.py  factory.py  prompts.py  vertex.py
app/services/speech/: __init__.py  factory.py
app/services/speech/stt/: __init__.py  base.py  hume.py  sarvam.py
app/services/speech/tts/: __init__.py  base.py  hume.py  sarvam.py
app/services/users/: models.py  schemas.py  service.py
frontend/: app.py  requirements.txt
gateway/: .env.example  Dockerfile  README.md  go.mod  go.sum
gateway/cmd/: main.go
gateway/internal/auth/: oidc_verifier.go  oidc_verifier_test.go  paseto.go  paseto_test.go
gateway/internal/config/: config.go  config_test.go
gateway/internal/middleware/: middleware.go  middleware_test.go
gateway/internal/proxy/: proxy.go  proxy_test.go
gateway/internal/server/: router.go  router_test.go
gateway/internal/utils/: response.go  response_test.go  token.go  token_test.go
tests/: conftest.py  test_api.py  test_auth_utils.py  test_config.py  test_context.py  test_emotion.py  test_graph_rag.py  test_guardrails.py  test_llm.py  test_rag_cache.py  test_schemas.py  test_summary_generator.py  test_users_service.py
