[project]
name = "dear-ai"
version = "0.1.0"
description = "Mental health companion chat API with voice support"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web
    "fastapi[standard]>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    # Configuration
    "pydantic[email]>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "python-dotenv>=1.0,<2.0",
    # Database – PostgreSQL async with pgvector
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pgvector>=0.3,<1.0",
    # HTTP
    "httpx>=0.27,<1.0",
    # Auth & Security
    "python-jose[cryptography]>=3.3,<4.0",
    "bcrypt>=4.0,<5.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "python-multipart>=0.0.12,<1.0",
    "google-cloud-speech>=2.26,<3.0",
    "google-auth>=2.30,<3.0",
    # Graph DB (FalkorDB async client)
    "falkordb>=1.0.0",
    # Redis Cache (async support)
    "redis>=5.0,<6.0",
    # Guardrails
    "guardrails-ai>=0.5,<1.0",
    # Performance / Resilience
    "orjson>=3.10,<4.0",
    "tenacity>=8.3,<9.0",
    # Structured logging (recommended)
    "structlog>=24.0,<25.0",
    "google-genai>=1.64.0",
    "sarvamai>=0.1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "pre-commit>=3.8,<4.0",
]

# Packaging
[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# Ruff
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# Pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

# Mypy
[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
