[project]
name = "ai-service"
version = "0.1.0"
description = "AI service for Dear AI"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi[standard]>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic[email]>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "python-dotenv>=1.0,<2.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pgvector>=0.3,<1.0",
    "httpx>=0.27,<1.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "bcrypt>=4.0,<5.0",
    "python-multipart>=0.0.12,<1.0",
    "google-cloud-aiplatform>=1.60,<2.0",
    "google-auth>=2.30,<3.0",
    "google-genai>=1.64.0",
    "falkordb>=1.0.0",
    "redis>=5.0,<6.0",
    "orjson>=3.10,<4.0",
    "tenacity>=8.3,<9.0",
    "structlog>=24.0,<25.0",
    "litellm>=1.85.0",
    "graphrag-sdk>=1.1.1",
    "pyseto>=1.9.3",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",

    "ruff>=0.11.0",
    "ty>=0.0.1",

    "pre-commit>=3.8,<4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Ruff
[tool.ruff]
target-version = "py311"
line-length = 100

exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # bugbear
    "SIM",    # simplify
    "ASYNC",  # async checks
    "RUF",    # ruff-specific
]

ignore = [
    "E501",   # handled by formatter
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

# Pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Coverage
[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
